# hatch-zipped-directory

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE.txt  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  tests.yml
hatch_inkscape_extension/: builder.py  hooks.py  utils.py
hatch_zipped_directory/: __init__.py  builder.py  hooks.py  metadata.py  utils.py
tests/: test_builder.py  test_functional.py  test_hooks.py  test_metadata.py  test_utils.py
tests/demo-project/: LICENSE.txt  README.md  pyproject.toml
